@@ -1,5 +1,10 @@
 2007-02-15  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c (jt_strdup): Removed.
+	(get_next_arg, expand_options) Use strdup.
+
+2007-02-15  Dalibor Topic  <robilad@kaffe.org>
+
 	*  lib/dummy.c, lib/strcasecmp.c, lib/string_.h, lib/strncasecmp.c,
 	m4/strcase.m4, m4/string_h.m4: Removed.
 
